# Copper

./: .gitignore  CMakeCache.txt  CMakeLists.txt  COPNV2.cbp  Makefile  README.md  cmake_install.cmake
release/: CMakeCache.txt  COPNV2  COPNV2.cbp  Makefile  cmake_install.cmake
src/: bitset.c  bitset.h  graph.c  graph.h  graph6.c  graph6.h  main.c  types.h  vertice_queue.c  vertice_queue.h
